tests/agl/rejections/scope/continue_outside_loop.agl
var x: int = 0
continue
